[package]
name = "linked"
description = "Store and access important links from the command line"
license = "GPL3"
readme = "readme.md"
version = "0.1.0"
authors = ["Tyler Boright <tyler@tylerboright.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = "3.0.10"
dirs = "3.0"
serde_json = "1"
